<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoggerTestActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Click below to test the API"
        android:id="@+id/textView_TopLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_ClickMe"
        android:id="@+id/button_ClickMe"
        android:onClick="button_ClickMe_onClick"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/editText_EventData"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/label_eventtype"
        android:id="@+id/textView_EventType"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/textView_TopLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/label_eventtags"
        android:id="@+id/textView_EventTags"
        android:layout_below="@+id/textView_EventType"
        android:layout_marginTop="19dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/label_eventdata"
        android:id="@+id/textView_EventData"
        android:layout_below="@+id/textView_EventTags"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editText_eventtype"
        android:id="@+id/editText_EventType"
        android:layout_above="@+id/textView_EventTags"
        android:layout_alignLeft="@+id/editText_EventTags"
        android:layout_alignStart="@+id/editText_EventTags"
        android:layout_alignRight="@+id/editText_EventTags"
        android:layout_alignEnd="@+id/editText_EventTags" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editText_eventtags"
        android:id="@+id/editText_EventTags"
        android:layout_above="@+id/textView_EventData"
        android:layout_toRightOf="@+id/textView_EventTags"
        android:layout_toEndOf="@+id/textView_EventTags"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editText_eventdata"
        android:id="@+id/editText_EventData"
        android:layout_below="@+id/editText_EventTags"
        android:layout_toRightOf="@+id/textView_EventData"
        android:layout_toEndOf="@+id/textView_EventData"
        android:layout_alignRight="@+id/editText_EventTags"
        android:layout_alignEnd="@+id/editText_EventTags" />

</RelativeLayout>
